--- a/index.html
+++ b/index.html
@@ -1,96 +1,276 @@
-body {
-  font-size: 16px;
-  color: #fff;
-  background-color: #ffffff;
-  font-family: 'Oxygen', sans-serif;
-}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Food, LLC.</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 
-h1 {font-size:35px;
-    color:#000000;
-    font-family: "Oxygen", sans-serif;
-    text-align: center;
+  </head>
+<body>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="index.html" class="pull-left visible-md visible-lg">
+          </a>
+
+          <div class="navbar-brand">
+            <a href="index.html"><h1>Food, LLC</h1></a>
+          </div>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+          <ul id="nav-list" class="navbar-nav navbar-right">
+            <li>
+              <a href="menu-categories.html">
+                <br class="visible-xs">Chicken</a>
+              </li>
+              <li>
+                <a href="#">
+                  <br class="visible-xs">Beef</a>
+                </li>
+                <li>
+                  <a href="#">
+                    <br class="visible-xs">Sushi</a>
+                  </li>
+               </ul><!--#nav-list-->
+               </div><!-- .collapse .navbar-collapse -->
+              </div><!-- .container -->
+            </nav><!--#header-nav -->
+          </header>
+     <div class="container">
+  <div class="page-header">
+    <h1>Our Menu</h1>      
+      <div id="main-content" class="container">
+        <div class="jumbotron">
+          <h2>Chicken</h2>      
+    <p>Chicken is the most common type of poultry in the world.[1] Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world, and their meat has been variously adapted to regional tastes.
+
+Chicken can be prepared in a vast range of ways, including baking, grilling, barbecuing, frying, and boiling, among many others, depending on its purpose. Since the latter half of the 20th century, prepared chicken has become a staple of fast food. Chicken is sometimes cited as being more healthful than red meat, with lower concentrations of cholesterol and saturated fat.[2]
+
+The poultry farming industry that accounts for chicken production takes on a range of forms across different parts of the world. In developed countries, chickens are typically subject to intensive farming methods, while less-developed areas raise chickens using more traditional farming techniques. The United Nations estimates there to be 19 billion chickens on Earth today, making them outnumber humans more than two to one.[3]
+
+Airline chicken
+Adobo
+Ají de gallina
+Andong jjimdak
+Arroz con pollo
+Ayam bakar
+Ayam betutu
+Ayam goreng
+Ayam kecap
+Ayam taliwang
+Backhendl
+Bamboo chicken
+Barbecue chicken
+Barberton chicken
+Bean sprouts chicken
+Beer can chicken
+Beggar's Chicken
+Biryani
+Bon bon chicken
+Bourbon chicken
+Brown stew chicken
+Bubur ayam
+Buffalo wing
+Buldak
+Butter chicken
+Cafreal
+Cashew chicken
+Chargha
+Chi-Mc
+Chicken 65
+Chicken à la King
+Chicken and duck blood soup
+Chicken and dumplings
+Chicken and waffles
+Chicken balls
+Chicken bog
+Chicken cacciatore
+Chicken Chettinad
+Chicken curry
+Chicken Divan
+Chicken fingers
+Chicken French
+Chicken fries
+Chicken karahi
+Chicken Kiev
+Chicken Lahori
+Chicken lollipop
+Chicken Marengo
+Chicken marsala
+Chicken Maryland
+Chicken mull
+Chicken nugget
+Chicken paillard[4][5]
+Chicken paprikash
+Chicken parmesan
+Chicken parmigiana
+Chicken pie
+Chicken riggies
+Chicken salad
+Chicken soup
+Chicken tabaka
+Chicken tatsuta
+Chicken tikka
+Chicken tikka masala
+Chicken Vesuvio
+Chicken with chilies
+Chigirtma
+Chikuzenni
+Chilli chicken
+Chinese chicken salad
+Chkmeruli
+Circassian chicken
+Claypot chicken rice
+Cock-a-leekie soup
+Cola chicken
+Coq au vin
+Cordon bleu
+Coronation chicken
+Country Captain
+Coxinha
+Crispy fried chicken
+Dak galbi
+Dakjuk
+Dakkochi
+Dapanji
+Dezhou braised chicken
+Dong'an chicken
+Double Down
+Dragon tiger phoenix
+Drunken chicken
+Engagement Chicken
+Flying Jacob
+Fricasé
+Fried chicken
+Fujian red wine chicken
+Galinha à africana
+Galinha à portuguesa
+Galinhada
+Gallo en chicha
+General Tso's chicken
+Gribenes
+Gulai Ayam
+Hainanese chicken rice
+Hawaiian haystack
+Hot chicken
+Huli-huli chicken
+Hunter's chicken
+Inasal na manok
+Jambonneau
+Jerk chicken
+Jerusalem mixed grill
+Jubilee chicken
+Kai yang
+Karaage
+Kedjenou
+Kelaguen
+King Ranch Chicken
+Korean fried chicken
+Kori Rotti
+Kuku Paka
+Kung Pao chicken
+Lavangi (food)
+Laziji
+Lemon chicken
+Lontong Cap Go Meh
+Mangalorean Chicken Sukka
+Maraq
+Mie ayam
+Moo goo gai pan
+Murgh Musallam
+Musakhan
+Nasi liwet
+Nasi tim
+Olivier salad
+Opor ayam
+Orange chicken
+Ostropel
+Padak
+Parmigiana
+Pastilla
+Piccata
+Pininyahang manok
+Pinikpikan
+Piyanggang manok
+Plecing ayam
+Pollo a la Brasa
+Pollo al disco
+Popcorn chicken
+Poularde Albufera
+Poulet au fromage
+Rendang ayam
+Roast chicken
+Rollatini
+Rotisserie chicken
+Sajji
+Saltimbocca
+Samgyetang
+Sanbeiji
+Satay
+Scaloppine
+Schnitzel
+Sesame chicken
+Shish taouk
+Shish taouk (Montreal)
+Snake bite chicken
+Sorol
+Soto ayam
+Soy sauce chicken
+Spice bag
+Swiss wing
+Tandoori chicken
+Tavuk göğsü
+Tbeet[6][7][8]
+Thalassery biryani
+Tinga (dish)
+Tom kha kai
+Torikatsu
+Torisashi
+Tsukune
+Waterzooi
+Wenchang chicken
+White cut chicken
+Wyngz
+Yakitori
+Yassa
+</p>
+  </div>
+  
+    </nav>
+
+  </header>
+
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
+  <script>
+var prevScrollpos = window.pageYOffset;
+window.onscroll = function() {
+var currentScrollPos = window.pageYOffset;
+  if (prevScrollpos > currentScrollPos) {
+    document.getElementById("navbar").style.top = "0";
+  } else {
+    document.getElementById("navbar").style.top = "-50px";
   }
-
-p {font-size: 14px;
-   color: #000000;
-   font-family: "Oxygen, sans-serif";
- }
-
-h2 {font-size: 20px;
-    color: #000000;
-    font-family: "Oxygen"; sans-serif;
-    text-align: center;
-  }
-ul {
-  list-style-type: none;
- }
-
-
-/** HEADER **/
-#header-nav {
-  background-color: #7777777;
-  border-radius: 0;
-  border: 0;
+  prevScrollpos = currentScrollPos;
 }
-
-#logo-img {
-  background: url('../images/restaurant-logo_large.png') no-repeat;
-  width: 150px;
-  height: 150px;
-  margin: 10px 15px 10px 0;
-}
-
-.navbar-brand {
-  padding-top: 25px;
-}
-
-.navbar-brand h1 { /* Restaurant name */
-  font-family: 'Lora', serif;
-  color: #000000;
-  font-size: 1.5em;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-shadow: 1px 1px 1px #222;
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: .75;
-}
-.navbar-brand a:hover, .navbar-brand a:focus {
-  text-decoration: none;
-}
-.navbar-brand p { /* Kosher cert */
-  color: #000;
-  text-transform: uppercase;
-  font-size: .7em;
-  margin-top: 15px;
-}
-.navbar-brand p span { /* Star-K */
-  vertical-align: middle;
-}
-
-#nav-list {
-  margin-tip: 10px;
-  background-color: #00b3b3;
-  text-align: center;
-}
-#nav-list a{
-  color: #000000;
-  text-align: center;
-}
-#nav-list a span{
-  font-size: 1.8em;
-}
-
-@media only screen and (min-width: 767px) {
-    #nav-list { visibility: hidden; }
-}
-
-
-.navabar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid #000000;
-}
-.navbar-header button.navbar-toggle {
-  clear: both;
-}
+</script>
+</body>
+</html>
 
 
